--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
-  },  "dependencies": {
+  },
+  "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.344.0",
